# chat_practise

./: .env  Cargo.toml  README.md
examples/: chat_client.rs  drop.rs
migrations/: 20250118114134_init.sql  20250126084021_chats.sql
src/: auth.rs  jwt.rs  lib.rs  main.rs  user.rs
src/chat/: chatcmd.rs  chatserver.rs  mod.rs
src/dao/: chatmsg_dao.rs  mod.rs  room_dao.rs  user_dao.rs
src/handlers/: user_handler.rs
src/models/: chatmsg.rs  mod.rs  room.rs  user.rs
src/routers/: mod.rs  user_router.rs
src/utils/: argon2.rs  mod.rs
src/web/: auth.rs  common.rs  jwt.rs  mod.rs
