[package]
name = "chat_practise"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
argon2 = "0.5.3"
bytes = "1.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.135"
sqlx = {version = "0.8.3", features = ["runtime-tokio", "mysql", "chrono"]}
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = {version = "0.7.13", features = ["codec"]}
